Reestructuracion de la clase resource separando en study, sample y resource pero manteniendo consistencia en base de datos
