# Pompilius/app/dev/pompilius/resource/domain/sample/Sample.scala
@@ -1,16 +1,0 @@
-//package dev.pompilius.resource.domain.sample
-//
-//import dev.pompilius.resource.domain.ResourceId
-//
-//case class Sample(
-//    id: SampleId,
-//    resourceId: ResourceId,
-//    name: String,
-//    minerals: Option[String],
-//    collectionMethods: Option[String],
-//    isFresh: Boolean,
-//    sampleType: Option[String],
-//    materialsUsed: Option[String],
-//    rockType: Option[String],
-//    geologicalProcesses: Option[String]
-//)
