# Pompilius/app/dev/pompilius/resource/domain/study/StudySample.scala
@@ -1,5 +1,0 @@
-package dev.pompilius.resource.domain.study
-
-import dev.pompilius.resource.domain.sample.SampleId
-
-case class StudySample (studyId: StudyId,sampleId: SampleId)
